--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,105 @@
+@import url('https://fonts.googleapis.com/css2?family=DM+Mono:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&display=swap');
+
+html * {
+  font-family: 'DM Mono';
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+  background-color: white;
+  display: flex;
   min-height: 100vh;
+  align-items: center;
+  justify-content: center;
+}
+
+.Card {
+  border: 1px solid rgb(216, 216, 216);
+  border-radius: 10px;
+  min-height: 350px;
+  max-width: 400px;
+  background-color: white;
+  
+}
+
+.CardHeader {
+  border-top-right-radius: 10px;
+  background-color: #F5F7B0;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  font-size: calc(8px + 1vmin);
+  color: black;
+  border-bottom: 1px solid rgb(216, 216, 216);
 }
 
-.App-link {
-  color: #61dafb;
+.CardHeader h2 {
+  padding: 1px;
+  font-weight: 500;
+  text-decoration: underline;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.Card:hover {
+  transition: all 0.2s ease-out;
+  box-shadow: 0px 1px 1px rgba(38, 38, 38, 0.2);
+  top: -4px;
+  border: 1px solid rgb(172, 171, 171);
+  background-color: white;
+}
+
+.CardHeader img {
+  max-width: 100%;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  border: 1px solid rgb(216, 216, 216);
+  box-shadow: 0px 6px 10px rgba(124, 106, 106, 0.2);
+}
+
+.CardContent {
+  padding: 10px;
+}
+
+ul {
+  padding-top: 1px;
+  padding-bottom: 0px;
+}
+
+.CardActions {
+  padding: 10px;
+  text-align: right;
+}
+
+.CardActions button {
+  margin-left: 10px;
+  text-align: right;
+  color: #fff;
+  border: none;
+  padding: 8px 16px;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+#button1 {
+  background-color: #007bff;
+}
+
+#button2 {
+  background-color: #2386f0;
+}
+
+@media (max-width: 767px) {
+  .Card {
+    margin-bottom: 10px;
   }
-  to {
-    transform: rotate(360deg);
+  
+  .CardHeader{
+    padding: 5px;
+  }
+  
+  .CardContent {
+    padding: 5px;
+  }
+  
+  .CardActions {
+    padding: 5px;
   }
 }
